# swi-aromearctic-caching

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
src/aa/: downloader.py
src/xarray2json/: xarray2json.py
