[project]
name = "swi-aromearctic-caching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "metpy>=1.7.1",
    "netcdf4>=1.7.3",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pyproj>=3.7.2",
    "rasterio>=1.4.3",
    "rioxarray>=0.20.0",
    "xarray>=2025.10.1",
]
